Demo Controls z-index Fix
fixed issue where demo controls btn text elements had their text displaying under the background squares, although the icons were above the squares. Now both text and icon appear above the background squares

--- a/css/home.css
+++ b/css/home.css
@@ -435,7 +435,10 @@ html.dark-mode #demo .square { opacity: 0.2; }
   flex-wrap: wrap;
   justify-content: center;
 }
-#demo-controls > * { margin: 5px; }
+#demo-controls > * {
+  margin: 5px;
+  z-index: 1;
+}
 /* dark mode overrides btn text default colors */
 html.dark-mode #demo-controls .btn-text { color: white; }
 html.dark-mode #demo-controls .btn-text .icon { border-color: white; }
